refactor: 프로젝트 전역 Java 17 문법(.toList()) 및 예외 처리 아키텍처 일괄 적용